core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/ZVC__Zoom_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Zoom Scheduler</label>
    <nameField>
        <label>Zoom Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Schedulers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>