core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/fields/ZVC__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>