core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/fields/ZVC__utm_content__c.field-meta.xml
<CustomField>
    <fullName>ZVC__utm_content__c</fullName>
    <label>UTM Content</label>
    <length>200</length>
    <type>Text</type>
</CustomField>