core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/fields/ZVC__utm_source__c.field-meta.xml
<CustomField>
    <fullName>ZVC__utm_source__c</fullName>
    <label>UTM Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>