core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/fields/ZVC__Zoom_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting_Id__c</fullName>
    <label>Zoom Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>