core/unpackaged/main/default/objects/ZVC__Zoom_Scheduler__c/listViews/ZVC__All.listView-meta.xml
<ListView>
    <fullName>ZVC__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>